--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "emailjs": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
