--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,7 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "swiper": "^8.0.7",
     "web-vitals": "^2.1.4"
   },
