--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,13 +1,16 @@
 {
   "name": "portfolio",
   "homepage": "https://yesilver.kr",
+  "proxy": "https://yesilver.kr",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "emailjs": "^3.7.0",
+    "http-proxy-middleware": "^2.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
